[WFLY-17069] Unlock preview features from underlying JDKs by default